--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -19,6 +19,38 @@
   justify-content: start;
   align-items: center;
   width: 100%;
+  overflow-y: hidden;
+}
+
+.navigation::-webkit-scrollbar {
+  width: 0; 
+  background: transparent;
+}
+
+.li {
+  list-style: none;
+  display: inline-block;
+  margin-right: 20px;
+  padding-bottom: 10px;
+  font-size: 18px;
+  font-weight: 500;
+  /* border-bottom: #000 2px solid; */
+  cursor: pointer;
+  transition: all 0.2s ease-out;
+}
+
+.link {
+  text-decoration: none !important;
+  color: #666 !important;
+  cursor: pointer;
+}
+
+.active-li {
+  border-bottom: #000 2px solid !important;
+}
+
+.active-link {
+  color: #000 !important;
 }
 
 /* Menu Bar Logo */
@@ -161,6 +193,10 @@
   margin-bottom: 12px;
 }
 
+.gallery .images:hover {
+  filter: opacity(.8);
+}
+
 @media (max-width: 991px) {
   .gallery {
     -webkit-column-count: 2;
@@ -178,4 +214,53 @@
     -moz-column-width: 100%;
     column-width: 100%;
   }
+}
+
+/* Model */
+.model {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #000000;
+  transition: opacity .4s ease, viqibility .4s ease, transform .5s ease-in-out;
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(0);
+  overflow: hidden;
+  z-index: 9999;
+}
+
+.model.open {
+  visibility: visible;
+  opacity: 1;
+  transform: scale(1);
+}
+
+.model img {
+  width: auto;
+  max-width: 100%;
+  height: auto;
+  max-height: 100%;
+  display: block;
+  line-height: 0;
+  box-sizing: border-box;
+  padding: 20px 0 20px;
+  margin: 0 auto;
+}
+
+.model.open svg {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  width: 2rem;
+  height: 2rem;
+  padding: 5px;
+  background-color: rgba(0, 0, 0, 0.4);
+  color: #ffffff;
+  cursor: pointer;
 }
